--- a/Fiap.NAC1.Web/Fiap.NAC1.Web/Views/Campeoes/Index.cshtml
+++ b/Fiap.NAC1.Web/Fiap.NAC1.Web/Views/Campeoes/Index.cshtml
@@ -5,14 +5,17 @@
 }
 
 <h1>Index</h1>
+@if (TempData["aaa"] != null)
+{
+    <div class="alert alert-success">@TempData["aaa"]</div>
+
+}
 
 <a asp-action="cadastrar" asp-controller="campeoes">Cadastrar</a>
 
-<form asp-controller="campeoes" asp-action="index" method="get">
-    <p>
-        Preco: <input type="text" name="Procurar"/>
-        <input type="submit" value="procurar"/>
-    </p>
+<form asp-action="Index" asp-controller="campeoes" class="form-inline">
+    <input type="number" name="nome" placeholder="Digite o preco" class="form-control  m-2" />
+    <input type="submit" value="procurar" class="btn btn-primary"/>
 </form>
 
 <table class="table">
@@ -23,23 +26,48 @@
         <th>Preco</th>
         <th>Rework</th>
         <th></th>
-        <th></th>
     </tr>
-    @foreach(var campeoes in Model)
+    @foreach (var campeoes in Model)
     {
         <tr>
             <td>@campeoes.Nome</td>
-            <td>@campeoes.DataLancamento</td>
+            <td>@campeoes.DataLancamento.ToShortDateString()</td>
             <td>@campeoes.Rotas</td>
             <td>@campeoes.Preco</td>
             <td>@campeoes.Rework</td>
             <td>
-                <a asp-action="editar" asp-route-id="@campeoes.Codigo">Editar</a>
-            </td>
-            <td>
-                <a asp-action="deletar" asp-route-id="@campeoes.Codigo">Deletar</a>
+                <a asp-action="editar" class="btn btn-sm btn-dark" asp-route-id="@campeoes.Codigo">Editar</a>
+
+                <button onclick="campeaoId.value = @campeoes.Codigo" type="button" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#exampleModal">
+                    Excluir
+                </button>
             </td>
         </tr>
     }
 </table>
+
+
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Confirmação</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Deseja realmente excluir o campeao?
+            </div>
+            <div class="modal-footer">
+                <form asp-action="deletar">
+                    <input type="hidden" name="id" id="campeaoId" />
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Não</button>
+                    <button type="submit" class="btn btn-danger">Sim</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
